--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
   <link href="style.css" rel="stylesheet" type="text/css" />
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Marmelad&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Marmelad&display=swap" rel="stylesheet">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@600&display=swap" rel="stylesheet">
-  
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@600&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
@@ -23,64 +23,62 @@
     <h6 style="margin-top: 0;">by Vlad Ceresna</h6>
   </nav>
   <header>
-    <h2 id="ptit">Удобнее! Безопаснее! Лучше!</h2>
+    <h2 id="ptit">More Convenient! Safer! Better!</h2>
   </header>
   <main>
     <div id="about">
-      <h2>Что такое Rula?</h2>
-      <p>Rula - это ретсистема на подобии Google, которая разрабатывается с учетом недостатков других систем. А я - индивидуальный разработчик и поэтому сам заинтересован в развитии системы и в её положительной репутации. На содержание системы не уходит ни копейки. В то же время я с системы также не получаю ни копейки. В конце страницы есть почтовый адрес на который можете обращаться по всем предложениям и вопросам.</p>
+      <h2>What is Rula?</h2>
+      <p>Rula is a ret-system similar to Google, developed with consideration of the flaws in other systems. I am an independent developer, personally interested in the system's progress and its positive reputation. The system runs at zero cost. At the same time, I do not earn a cent from it either. At the bottom of the page, you'll find an email address where you can send any suggestions or questions.</p>
     </div>
     <div id="news">
-      <h2>Новости</h2>
-      <h3>Встречайте Welta 0.5 и почту Rosto 0.1</h3>
-      <p>Новое обновление системы уже вышло! С этого момента в системе появляется почта Rosto. Пока что это инструмент для управления аккаунтом и для приватного общения между пользователями. Теперь каждый кто использует сервисы Rula должен обязательно иметь скачанный Rosto. Мы взяли все функции связанные с профилем из Welta, укомплектовали их и перенесли в Rosto, а из Welta их удалили, для экономии памяти пользователя. Теперь наша система работает как система. В Welta нажимая на кнопку профиля открывается профиль в приложении Rosto. Поэтому для правильной работы системы нужно во всех сервисах войти под одним аккаунтом. Также устранены ошибки.</p>
+      <h2>News</h2>
+      <h3>Welcome Welta 0.5 and Rosto Mail 0.1</h3>
+      <p>A new system update has been released! From now on, the system includes Rosto Mail. For now, it is a tool for account management and private communication between users. Anyone using Rula services is now required to have Rosto installed. We took all profile-related functions from Welta, packaged them, and moved them to Rosto, removing them from Welta to save users' memory. Now, our system truly works as a unified system. In Welta, pressing the profile button will open the profile in the Rosto app. Therefore, for the system to function properly, you must be logged in with the same account across all services. Bugs have also been fixed.</p>
     </div>
     <div>
-      <h2 style="background: #008060; margin: 0; padding: 0.83em 0; color: white; border-bottom: solid 1px white;border-top: solid 1px white;">Наши сервисы!</h2>
+      <h2 style="background: #008060; margin: 0; padding: 0.83em 0; color: white; border-bottom: solid 1px white; border-top: solid 1px white;">Our Services!</h2>
       <ul>
         <li id="awelta">
           <h3>Welta 0.5</h3>
-          <p>Welta - самый первый сервис Rula. Именно на нем испытывались все основные функции системы.</p>
-          <p>Есть много людей занимающихся одним делом, которое им нравится. С помощью этого приложения люди с одинаковыми интересами живущие неподалеку смогут найти друг друга.</p>
-          <p>С выходом 0.5-ой версии в Welta появляются долгожданные фильтры. Теперь можна фильтровать сообщения по интересам. Например если хотите пообщаться про футбол, то просто вписываете в поле "фильтры" слово "футбол", подтверждаете и общаетесь с людьми которые в качестве фильтров выбрали это же слово. То же самое можете делать и, например, с населенными пунктами, чтобы найти людей из своего города, и т.д.</p>
+          <p>Welta was the very first Rula service. It was used to test all the core features of the system.</p>
+          <p>There are many people doing something they love. With this app, people with shared interests living nearby can find each other.</p>
+          <p>With the release of version 0.5, Welta introduces long-awaited filters. Now you can filter messages by interest. For example, if you want to chat about football, simply type "football" in the "filters" field, confirm, and you'll chat with others who selected the same keyword. You can do the same with cities or regions to find local people, and so on.</p>
           <div id="butcon">
-          <a href="apks/Welta_v0.5.apk" id="button">
-            Скачать
-          </a>
+            <a href="apks/Welta_v0.5.apk" id="button">
+              Download
+            </a>
           </div>
         </li>
         <li id="arosto">
           <h3>Rosto 0.1</h3>
-          <p>Rosto - это почта, главный сервис Rula. С его помощью происходит коммуникация между пользователями</p>
-          <p>Письма отправляются не на реальный почтовый адрес человеку, а на RulaID. Поэтому ваш реальный почтовый адрес остается в безопасности.</p>
-          <p>В будущем письма можно будет фильтровать по самым разным признакам. А пока что это лишь простая возможность внутрисистемной коммуникации.</p>
+          <p>Rosto is the mail system and the main service of Rula. It enables user communication.</p>
+          <p>Messages are sent not to a real email address but to a RulaID. This keeps your real email safe.</p>
+          <p>In the future, messages will be filterable by various criteria. For now, it simply offers internal communication within the system.</p>
           <div id="butcon">
-          <a href="apks/Rosto_v0.1.apk" id="button">
-            Скачать
-          </a>
+            <a href="apks/Rosto_v0.1.apk" id="button">
+              Download
+            </a>
           </div>
         </li>
         <li id="arula">
-          <h3>Почему Rula?</h3>
-          <p>Rula - уникальная система не зря называемая ретсистемой, что дословно означает сетьсистема. Это показывает всю организованность и сплочённость работы всех сервисов.</p>
-          <p>Rula выигрывает и по технической части: её сервисы обновляются получая всё новые функции в два раза быстрее чем в больших и неповоротливых корпорациях, но в свет никогда не выйдут с ошибками.</p>
-          <p>Rula скрывает от других пользователей ваш реальный почтовый адрес, который теперь находится в безопасности. Напротив для подписи всех ваших действий, например писем, Rula использует ваш уникальный идентификатор (своеобразный логин), так называемый RulaID</p>
-          
+          <h3>Why Rula?</h3>
+          <p>Rula is a unique system rightly called a "ret-system", which literally means "net-system". This reflects the organization and cohesion of all its services.</p>
+          <p>Rula also wins technically: its services receive functional updates twice as fast as those from large, slow-moving corporations, yet never ship with bugs.</p>
+          <p>Rula hides your real email address from other users, keeping it safe. Instead, to sign your actions like messages, Rula uses your unique identifier—a kind of login—called RulaID.</p>
         </li>
       </ul>
     </div>
   </main>
   <footer>
-    <h5>RetSystem Rula</h5>  
-    
+    <h5>RetSystem Rula</h5>
+
     <h5><a href="https://t.me/rula_support_bot">Telegram support bot</a></h5>
-    <h5><a href="mailto:vladceresna6@gmail.com">Написать нам</a></h5>  
+    <h5><a href="mailto:vladceresna6@gmail.com">Contact Us</a></h5>
     <h5>Copyright © Vlad Ĉereŝna (Rula), 2023
-      Все авторские права на приложения, их названия и иконки на этом сайте принадлежат владельцу этого сайта</h5>
+      All copyrights to the applications, their names, and icons on this site belong to the owner of this site</h5>
   </footer>
-  
+
   <script src="script.js"></script>
-  <!--<script src="https://replit.com/public/js/replit-badge.js" theme="blue" defer></script>-->
 </body>
 
 </html>
