--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           <h3>Why Rula?</h3>
           <p>Rula is a unique system rightly called a "ret-system", which literally means "net-system". This reflects the organization and cohesion of all its services.</p>
           <p>Rula also wins technically: its services receive functional updates twice as fast as those from large, slow-moving corporations, yet never ship with bugs.</p>
-          <p>Rula hides your real email address from other users, keeping it safe. Instead, to sign your actions like messages, Rula uses your unique identifier—a kind of login—called RulaID.</p>
+          <p>Rula hides your real email address from other users, keeping it safe. Instead, to sign your actions like messages, Rula uses your unique identifier - a kind of login-called RulaID.</p>
         </li>
       </ul>
     </div>
